--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -20,4 +20,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
+
+        <TextView
+                android:id="@+id/textViewRoles"
+                android:layout_width="389dp"
+                android:layout_height="44dp"
+                android:text="Roles de usuario"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
