--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,32 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:orientation="vertical"
-                  android:padding="16dp">
 
-        <EditText
-                android:id="@+id/emailEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
+    <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="355dp"
+            android:layout_height="45dp"
+            android:hint="Ingrese su correo electrónico "
+            android:inputType="textEmailAddress" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.599"/>
+    <EditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="355dp"
+            android:layout_height="45dp"
+            android:hint="Ingrese contraseña"
+            android:inputType="textPassword" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.725"/>
+    <Button
+            android:id="@+id/loginButton"
+            android:layout_width="334dp"
+            android:layout_height="58dp"
+            android:text="Iniciar Sesion" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.857" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.493"/>
+    <TextView
+            android:text="Correo Electrónico "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/emailEditText" app:layout_constraintHorizontal_bias="0.096"
+            app:layout_constraintVertical_bias="1.0"/>
+    <TextView
+            android:text="Contraseña"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView3"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/passwordEditText" app:layout_constraintHorizontal_bias="0.096"
+            app:layout_constraintVertical_bias="1.0"/>
+    <FrameLayout
+            android:layout_width="229dp"
+            android:layout_height="226dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.207" app:layout_constraintCircleRadius="80dp"
+            app:layout_constraintDimensionRatio="80dp" android:background="#4759C85D">
 
-        <EditText
-                android:id="@+id/passwordEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword" />
-
-        <Button
-                android:id="@+id/loginButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login" />
-    </LinearLayout>
+        <ImageView
+                android:layout_width="227dp"
+                android:layout_height="match_parent" app:srcCompat="@mipmap/ic_logodomed_foreground"
+                android:id="@+id/imageView4"
+        />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
