--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,59 +6,106 @@
 
     <EditText
             android:id="@+id/emailEditText"
-            android:layout_width="355dp"
+            android:layout_width="315dp"
             android:layout_height="45dp"
-            android:hint="Ingrese su correo electrónico "
-            android:inputType="textEmailAddress" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.599"/>
-    <EditText
-            android:id="@+id/passwordEditText"
-            android:layout_width="355dp"
-            android:layout_height="45dp"
-            android:hint="Ingrese contraseña"
-            android:inputType="textPassword" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.725"/>
-    <Button
-            android:id="@+id/loginButton"
-            android:layout_width="334dp"
-            android:layout_height="58dp"
-            android:text="Iniciar Sesion" app:layout_constraintBottom_toBottomOf="parent"
+            android:hint="  Ingrese su correo electrónico"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/rounded_edittext"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.857" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.493"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.655" android:textColor="#000000" android:textSize="16sp"
+            android:textColorHint="#9D9C9C" android:textAlignment="viewStart" android:textColorLink="#352D2D"
+    />
     <TextView
             android:text="Correo Electrónico "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView2"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/emailEditText" app:layout_constraintHorizontal_bias="0.096"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintBottom_toTopOf="@+id/emailEditText" app:layout_constraintHorizontal_bias="0.178"
+            app:layout_constraintVertical_bias="1.0" android:textStyle="bold" android:fontFamily="@font/amiko"
+            android:textSize="15sp"/>
+    <Button
+            android:id="@+id/loginButton"
+            android:layout_width="315dp"
+            android:layout_height="60dp"
+            android:text="Iniciar Sesión" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.867" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:cornerRadius="5dp"
+            android:backgroundTint="#A3E682" android:textColor="#616060"/>
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="315dp"
+            android:layout_height="wrap_content"
+            app:endIconMode="password_toggle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.765"
+            android:id="@+id/textInputLayout"
+            app:boxBackgroundMode="none"
+            app:hintEnabled="false"
+            android:textColorHint="#9D9C9C" app:hintTextColor="#3C2828">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:hint="Ingrese contraseña"
+                android:inputType="textPassword"
+                android:background="@drawable/rounded_edittext"
+                android:padding="10dp"
+                android:textColorHint="#9D9C9C" android:textColorLink="#3C2828"/>
+    </com.google.android.material.textfield.TextInputLayout>
     <TextView
             android:text="Contraseña"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/passwordEditText" app:layout_constraintHorizontal_bias="0.096"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintVertical_bias="0.994" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+            app:layout_constraintHorizontal_bias="0.147" android:textSize="15sp" android:fontFamily="@font/amiko"
+            android:textStyle="bold"/>
+
     <FrameLayout
-            android:layout_width="229dp"
-            android:layout_height="226dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/frameLayout"
+            android:layout_width="291dp"
+            android:layout_height="171dp"
+            android:background="@drawable/rounded_image"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.207" app:layout_constraintCircleRadius="80dp"
-            app:layout_constraintDimensionRatio="80dp" android:background="#4759C85D">
+            app:layout_constraintVertical_bias="0.208">
 
         <ImageView
-                android:layout_width="227dp"
-                android:layout_height="match_parent" app:srcCompat="@mipmap/ic_logodomed_foreground"
                 android:id="@+id/imageView4"
-        />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                app:srcCompat="@mipmap/ic_logodomed_foreground"/>
     </FrameLayout>
+    <TextView
+            android:text="Iniciar Sesión "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView4"
+            app:layout_constraintTop_toTopOf="@+id/frameLayout" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/emailEditText"
+            app:layout_constraintVertical_bias="0.749"
+            android:textSize="20sp" android:textStyle="bold" android:textColor="#FB050505"/>
+    <TextView
+            android:text="Por favor, ingrese sus credenciales para acceder."
+            android:layout_width="272dp"
+            android:layout_height="50dp" android:id="@+id/textView5"
+            app:layout_constraintTop_toTopOf="@+id/frameLayout" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/emailEditText"
+            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.908"
+            android:textAlignment="center" android:textSize="14sp" android:fontFamily="@font/amiko"
+            android:lineSpacingExtra="-2sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
