Bonghu64 - Ajuste de spinners

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,5 +107,14 @@
             app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.908"
             android:textAlignment="center" android:textSize="14sp" android:fontFamily="@font/amiko"
             android:lineSpacingExtra="-2sp"/>
+    <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
