Bonghu64 - AJustes visuales a citas y cancelacion de citas

--- a/app/src/main/res/layout/activity_crear_cita.xml
+++ b/app/src/main/res/layout/activity_crear_cita.xml
@@ -81,6 +81,12 @@
                 android:backgroundTint="?android:attr/colorAccent"
                 android:textColor="@android:color/white"
                 android:paddingVertical="12dp"/>
+        <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_gravity="center"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
