--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -23,7 +23,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#80000000"
-            android:visibility="gone" />
+                    android:visibility="gone" />
 
             <LinearLayout
                     android:id="@+id/cuadroProgress"
@@ -32,51 +32,51 @@
                     android:orientation="vertical"
                     android:layout_gravity="center"
                     android:background="@drawable/border_rounded"
-            android:padding="24dp"
-            android:visibility="gone"
-            android:gravity="center">
+                    android:padding="24dp"
+                    android:visibility="gone"
+                    android:gravity="center">
 
-            <ProgressBar
-                    android:id="@+id/progressBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:indeterminate="true"
-                    android:visibility="gone" />
-        </LinearLayout>
+                <ProgressBar
+                        android:id="@+id/progressBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:indeterminate="true"
+                        android:visibility="gone" />
+            </LinearLayout>
 
-        <!-- RecyclerView que estará en el fondo -->
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewUsers"
+            <!-- RecyclerView que estará en el fondo -->
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewUsers"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btnCrearCita" />
+        </FrameLayout>
+
+        <!-- Botón para crear una nueva cita -->
+        <Button
+                android:id="@+id/btnCrearCita"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Crear Cita"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp" />
+
+        <!-- TextView -->
+        <TextView
+                android:id="@+id/text_gallery"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnCrearCita" />
-    </FrameLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnCrearCita"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!-- Botón para crear una nueva cita -->
-    <Button
-            android:id="@+id/btnCrearCita"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Crear Cita"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
-
-    <!-- TextView -->
-    <TextView
-            android:id="@+id/text_gallery"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnCrearCita"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
