--- a/app/src/main/res/layout/item_cita.xml
+++ b/app/src/main/res/layout/item_cita.xml
@@ -14,6 +14,13 @@
             android:layout_height="wrap_content"
             android:text="Fecha: "
             android:textSize="16sp"/>
+    <TextView
+            android:id="@+id/horarioTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Horario"
+            android:textSize="16sp"
+            android:paddingTop="4dp" />
 
     <TextView
             android:id="@+id/odontologoTextView"
