--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -29,21 +29,23 @@
                 android:orientation="vertical">
 
             <TextView
+                    android:id="@+id/textViewName"
                     android:layout_width="match_parent"
-                    android:layout_height="67dp"
+                    android:layout_height="51dp"
                     android:paddingTop="@dimen/nav_header_vertical_spacing"
                     android:text="@string/nav_header_title"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
             <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
                     android:text="@string/nav_header_subtitle"
-                    android:id="@+id/textView"/>
+                    android:id="@+id/textViewEmail"
+            />
         </LinearLayout>
         <ImageView
-                android:layout_width="102dp"
-                android:layout_height="match_parent"
+                android:layout_width="91dp"
+                android:layout_height="117dp"
                 app:srcCompat="@mipmap/ic_logodomedt"
                 android:id="@+id/imageView"
                 android:layout_gravity="end"
