--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,11 @@
                 android:title="@string/menu_gallery"/>
         <item
                 android:id="@+id/nav_slideshow"
-                android:icon="@drawable/ic_menu_users"
+                android:icon="@drawable/ic_history"
                 android:title="@string/menu_slideshow"/>
     </group>
+    <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/baseline_logout_24"
+            android:title="@string/action_logout"/>
 </menu>
