--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,11 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-            android:id="@+id/action_logout"
-            android:icon="@drawable/baseline_logout_24"
-            android:title="@string/action_logout"
-            android:orderInCategory="100"
-            app:showAsAction="never" android:iconTint="#E6141111" android:iconTintMode="src_atop"/>
-
-</menu>
+      xmlns:app="http://schemas.android.com/apk/res-auto"/>
