--- a/app/src/main/res/layout/activity_crear_cita.xml
+++ b/app/src/main/res/layout/activity_crear_cita.xml
@@ -70,6 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:id="@+id/cardOdon"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp">
 
@@ -107,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
+                android:id="@+id/cardHora"
                 app:cardElevation="4dp">
 
             <LinearLayout
